[project]
name = "ecm-max-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "maxapi>=1.2.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-json-logger>=4.1.0",
    "redis>=8.0.1",
    "taskiq>=0.12.4",
    "taskiq-redis>=1.2.3",
]
